--- a/page-1/page-1.css
+++ b/page-1/page-1.css
@@ -12,9 +12,9 @@
     padding: 20px 0px;
     display: flex;
     justify-content: space-between;
-    gap: 700px;
     align-items: center;
 }
+
 .logo-text
 {
     display: flex;
@@ -28,7 +28,7 @@
 {
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 20px;
 }
 .but-1
 {
@@ -47,7 +47,8 @@
     background-color: #fff;
     color: rgb(0, 145, 255);
     transition: all 1s ease;
-
+    transform: translateY(-5px);
+    box-shadow: 0px 1px 5px ;
 }
 .but-2
 {
@@ -55,7 +56,8 @@
     height: 45px;
     border: none;
     border-bottom: 2px solid gray;
-    cursor: pointer;
+    cursor: pointer rgb(0, 145, 255);
+    background-color: transparent;
 }
 .but-2:hover
 {
@@ -63,4 +65,132 @@
     border-color: black;
     box-shadow: 0px 1px 5px;
     transition: all 0.7s ease;
+}
+.search-box
+{
+    width: 250px;
+    padding-top:10px;
+    display: flex;
+}
+.search-box input
+{
+    border: none;
+    outline: none;
+    border-bottom: 1px solid gray;
+    width: 200px;
+
+}
+.search-but
+{
+    border: none;
+    cursor: pointer;
+}
+.search-but img
+{
+    width: 100%;
+}
+.left{
+    width: 400px;
+    margin: 0;
+}
+.left h1
+{
+    font-size: 40px;
+    font-weight: bolder;
+}
+.left p
+{
+    color: rgb(107, 107, 107);
+    font-size: 25px;
+    padding: 15px 0px;
+}
+.rost
+{
+    width: 600px;
+    height: 390px;
+    background-color: #4D2900;
+    margin: 0;
+    border-radius: 10px;
+    position: relative;
+    box-shadow: 0px 3px 10px;
+}
+.head
+{
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 100px;
+}
+.rost img
+{
+    width: 500px;
+    position: relative;
+    top: -5px;
+    left: -40px;
+}
+.but-3
+{
+    width: 212px;
+    height: 50px;
+    background-color: #E16A00;
+    border: none;
+    color: #fff;
+    font-size: 20px;
+    font-weight: bold;
+    border-radius: 10px;
+    cursor: pointer;
+}
+.but-3:hover{
+    transform: translateY(-5px);
+    transition: all 1s ease;
+    background-color: #fff;
+    color: #4D2900;
+    border: 2px solid #4D2900;
+}
+.t-1
+{
+    font-size: 18px;
+    color: #fff;
+    width: 300px;
+    margin: 0;
+    margin-left: 10px;
+    padding: 5px 0px;
+}
+.t-2
+{
+    font-size: 18px;
+    color: #fff;
+    width: 310px;
+    margin: 0;
+    margin-left: 30px;
+    padding: 5px 0px;
+}
+.section-1
+{
+    width: 90%;
+    display: flex;
+    margin-top: 70px;
+    justify-content: space-between;
+    align-items: center;
+}
+.aside-1
+{
+    margin: 0;
+    font-size: 20px;
+}
+.aside-2
+{
+    margin: 0;
+    display: flex;
+    gap: 20px;
+}
+.aside-2 p
+{
+    color: rgb(77, 75, 75);
+    font-weight: bold;
+}
+.aside-2 p:hover
+{
+    color: orangered;
+    cursor: pointer;
 }
