--- a/page-1/page-1.css
+++ b/page-1/page-1.css
@@ -194,3 +194,95 @@
     color: orangered;
     cursor: pointer;
 }
+.section-2
+{
+    width: 90%;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 2;
+    margin-top: 100px;
+    gap: 20px;
+}
+.box
+{
+    width: 200px;
+    height: 330px;
+    box-shadow: 0px 0px 10px;
+    padding: 10px;
+}
+.box img
+{
+    margin: auto;
+    margin-left: 30px;
+    width: 128px;
+    height: 190px;
+}
+.p-01
+{
+    font-weight: bolder;
+    font-size: 20px; 
+    padding: 10px 0px;
+    color: black;
+    text-align: center;
+}
+.p-02
+{
+    font-weight: bolder;
+    font-size: 18px; 
+    padding: 0px 0px;
+    color: rgb(48, 48, 48);
+    text-align: center;
+}
+.but-4
+{
+    width: 130px;
+    margin-top: 30px;
+    height: 40px;
+    border: none;
+    background-color: #E16A00;
+    color: #fff;
+    font-size: 16px;
+    font-weight: bold;
+    margin: auto;
+    margin-left: 30px;
+    margin-top: 20px;
+    border-radius: 5px;
+}
+.but-4:hover
+{
+    background-color: #fff;
+    border: 2px solid #E16A00;
+    color: #E16A00;
+    cursor: pointer;
+    transition: all 1s ease;
+}
+.center
+{
+    text-align: center;
+    margin-top: 50px;
+    font-size: 40px;
+    font-weight: bold;
+}
+.section-3
+{
+    width: 70%;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: 3;
+}
+.boxs
+{
+    width: 242px;
+    height: 76px;
+    box-shadow: 0px 0px 10px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.text-p
+{
+    font-size: 20px;
+    font-weight: bold;
+    
+}
